:zap: fix header z-index issue on element hover

--- a/design/blocks/header/header.module.scss
+++ b/design/blocks/header/header.module.scss
@@ -11,6 +11,7 @@
   @include breakpoints.media-md {
     --header-spacing: 0.5em;
   }
+  z-index: 100000;
 }
 
 .headerContent {
